highlight isearch-fail; ctrl-g reverts to last found query

--- a/src/css/themes/_base16-apathy.scss
+++ b/src/css/themes/_base16-apathy.scss
@@ -55,6 +55,7 @@ $cursor_fg: #031a16;
 .number { color: #3e7996; }
 .operator { }
 .error { color: #3e9688; }
+.isearch-fail { background-color: #3e9688; color: #0b342d; }
 .xml-open-tag { color: #96883e; }
 .xml-close-tag { color: #96883e; }
 .xml-attribute { color: #3e9688; }
