--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -55,6 +55,7 @@ $cursor_fg: #fcf7ef;
 .number { color: #00824f; }
 .operator { }
 .error { color: #a7601f; }
+.isearch-fail { color: #dd0020; background-color: #ffd4bf; font-weight: bold; }
 .xml-open-tag { color: #a7601f; }
 .xml-close-tag { color: #a7601f; }
 .xml-attribute { color: #007a9f; }
