--- a/src/css/themes/_ef-deuteranopia-light.scss
+++ b/src/css/themes/_ef-deuteranopia-light.scss
@@ -55,6 +55,7 @@ $cursor_fg: #f5f5ff;
 .number { color: #765040; }
 .operator { }
 .error { color: #765040; }
+.isearch-fail { color: #965000; background-color: #f0e0a0; font-weight: bold; }
 .xml-open-tag { color: #065fff; }
 .xml-close-tag { color: #065fff; }
 .xml-attribute { color: #1f77bb; }
