--- a/src/css/themes/_ef-elea-dark.scss
+++ b/src/css/themes/_ef-elea-dark.scss
@@ -55,6 +55,7 @@ $cursor_fg: #222524;
 .number { color: #cfaaff; }
 .operator { }
 .error { color: #e0b02f; }
+.isearch-fail { color: #ff7a5f; background-color: #551525; font-weight: bold; }
 .xml-open-tag { color: #7fca5a; }
 .xml-close-tag { color: #7fca5a; }
 .xml-attribute { color: #f59acf; }
