--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -55,6 +55,7 @@ $cursor_fg: #002451;
 .number { color: #bbdaff; }
 .operator { }
 .error { color: #ff9da4; font-weight: bold; }
+.isearch-fail { background-color: #ff9da4; color: #002451; font-weight: bold; }
 .xml-open-tag { color: #ffc58f; }
 .xml-close-tag { color: #ffc58f; }
 .xml-attribute { color: #ffeead; }
