--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -55,6 +55,7 @@ $cursor_fg: #2d2d2d;
 .number { color: #6699cc; }
 .operator { }
 .error { color: #f2777a; font-weight: bold; }
+.isearch-fail { background-color: #f2777a; color: #2d2d2d; font-weight: bold; }
 .xml-open-tag { color: #f99157; }
 .xml-close-tag { color: #f99157; }
 .xml-attribute { color: #ffcc66; }
