--- a/src/css/themes/_standard-dark.scss
+++ b/src/css/themes/_standard-dark.scss
@@ -55,6 +55,7 @@ $cursor_fg: #000000;
 .number { color: #7fffd4; }
 .operator { }
 .error { color: #fec43f; }
+.isearch-fail { color: #ffffff; background-color: #9d1f1f; }
 .xml-open-tag { color: #87cefa; }
 .xml-close-tag { color: #87cefa; }
 .xml-attribute { color: #eedd82; }
