--- a/src/css/themes/_standard-light.scss
+++ b/src/css/themes/_standard-light.scss
@@ -55,6 +55,7 @@ $cursor_fg: #ffffff;
 .number { color: #008b8b; }
 .operator { }
 .error { color: #b6532f; }
+.isearch-fail { color: #000000; background-color: #ff8f88; }
 .xml-open-tag { color: #0000ff; }
 .xml-close-tag { color: #0000ff; }
 .xml-attribute { color: #a0522d; }
