--- a/src/css/themes/_whiteboard.scss
+++ b/src/css/themes/_whiteboard.scss
@@ -55,6 +55,7 @@ $cursor_fg: #f5f5f5;
 .number { color: #6e8b3d; }
 .operator { }
 .error { color: #ff0000; }
+.isearch-fail { background-color: #8b0000; }
 .xml-open-tag { color: #cd9b1d; }
 .xml-close-tag { color: #cd9b1d; }
 .xml-attribute { color: #2e8b57; }
