--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  container-type: inline-size;
 
   &.Ymacs_Frame-hasOverlays {
     &[data-ymacs-overlays~="selection"],
@@ -57,7 +58,7 @@
 .Ymacs-frame-content {
   white-space: pre;
   /* padding: 4px; */
-  padding-bottom: 1000px;
+  padding-bottom: 100cqh;
   z-index: 20;
   position: relative;
 }
@@ -270,6 +271,7 @@ $lnwidth: 3.1em;
 
   .Ymacs_Menu {
     padding: 1em 1.5em;
+    scroll-padding: 1em 1.5em;
     max-height: 20em;
     overflow: auto;
     .Ymacs_Menu_Item {
