--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -19,8 +19,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  font-family: "Iosevka Custom", "DejaVu Sans Mono", "Lucida Sans Typewriter", "Ubuntu Mono", monospace;
-  font-size: 16px;
+  font-family: "Iosevka Custom", "Iosevka Web", "Iosevka", "Ubuntu Mono", "DejaVu Sans Mono", "Lucida Sans Typewriter", monospace;
 }
 
 .Ymacs_Frame {
