add some inline styles in html mode

--- a/src/css/themes/_ef-autumn.scss
+++ b/src/css/themes/_ef-autumn.scss
@@ -69,12 +69,10 @@ $cursor_fg: #0f0e06;
 .xml-cdata-starter { color: #cf9f7f; font-style: italic; }
 .xml-cdata-stopper { color: #cf9f7f; font-style: italic; }
 .lisp-keyword { color: #ff7a7f; font-weight: bold; }
-.markdown-heading1 { color: #64aa0f; font-weight: bold; }
-.markdown-heading2 { color: #ef656a; font-weight: bold; }
-.markdown-heading3 { color: #3dbbb0; font-weight: bold; }
-.markdown-heading4 { color: #df8f6f; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #64aa0f; font-weight: bold; }
+.heading2 { color: #ef656a; font-weight: bold; }
+.heading3 { color: #3dbbb0; font-weight: bold; }
+.heading4 { color: #df8f6f; font-weight: bold; }
 .markdown-blockquote { color: #cf9f7f; font-style: italic; }
 .markdown-blockquote1 { color: #cf9f7f; font-style: italic; }
 .markdown-blockquote2 { color: #cf9f7f; font-style: italic; }
