--- a/src/css/themes/_ef-cyprus.scss
+++ b/src/css/themes/_ef-cyprus.scss
@@ -69,12 +69,10 @@ $cursor_fg: #fcf7ef;
 .xml-cdata-starter { color: #8f6f4a; font-style: italic; }
 .xml-cdata-stopper { color: #8f6f4a; font-style: italic; }
 .lisp-keyword { color: #557400; font-weight: bold; }
-.markdown-heading1 { color: #557400; font-weight: bold; }
-.markdown-heading2 { color: #bf4400; font-weight: bold; }
-.markdown-heading3 { color: #3f6faf; font-weight: bold; }
-.markdown-heading4 { color: #00824f; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #557400; font-weight: bold; }
+.heading2 { color: #bf4400; font-weight: bold; }
+.heading3 { color: #3f6faf; font-weight: bold; }
+.heading4 { color: #00824f; font-weight: bold; }
 .markdown-blockquote { color: #8f6f4a; font-style: italic; }
 .markdown-blockquote1 { color: #8f6f4a; font-style: italic; }
 .markdown-blockquote2 { color: #8f6f4a; font-style: italic; }
