--- a/src/css/themes/_ef-elea-dark.scss
+++ b/src/css/themes/_ef-elea-dark.scss
@@ -69,12 +69,10 @@ $cursor_fg: #222524;
 .xml-cdata-starter { color: #cac89f; font-style: italic; }
 .xml-cdata-stopper { color: #cac89f; font-style: italic; }
 .lisp-keyword { color: #d0b9f0; font-weight: bold; }
-.markdown-heading1 { color: #eba8a8; font-weight: bold; }
-.markdown-heading2 { color: #a9c99f; font-weight: bold; }
-.markdown-heading3 { color: #60d5c2; font-weight: bold; }
-.markdown-heading4 { color: #cfaaff; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #eba8a8; font-weight: bold; }
+.heading2 { color: #a9c99f; font-weight: bold; }
+.heading3 { color: #60d5c2; font-weight: bold; }
+.heading4 { color: #cfaaff; font-weight: bold; }
 .markdown-blockquote { color: #cac89f; font-style: italic; }
 .markdown-blockquote1 { color: #cac89f; font-style: italic; }
 .markdown-blockquote2 { color: #cac89f; font-style: italic; }
