--- a/src/css/themes/_ef-maris-light.scss
+++ b/src/css/themes/_ef-maris-light.scss
@@ -69,12 +69,10 @@ $cursor_fg: #edf4f8;
 .xml-cdata-starter { color: #8b4052; font-style: italic; }
 .xml-cdata-stopper { color: #8b4052; font-style: italic; }
 .lisp-keyword { color: #6a4a9f; font-weight: bold; }
-.markdown-heading1 { color: #444fcf; font-weight: bold; }
-.markdown-heading2 { color: #3a6f00; font-weight: bold; }
-.markdown-heading3 { color: #1f66af; font-weight: bold; }
-.markdown-heading4 { color: #5f2fba; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #444fcf; font-weight: bold; }
+.heading2 { color: #3a6f00; font-weight: bold; }
+.heading3 { color: #1f66af; font-weight: bold; }
+.heading4 { color: #5f2fba; font-weight: bold; }
 .markdown-blockquote { color: #8b4052; font-style: italic; }
 .markdown-blockquote1 { color: #8b4052; font-style: italic; }
 .markdown-blockquote2 { color: #8b4052; font-style: italic; }
