--- a/src/css/themes/_material.scss
+++ b/src/css/themes/_material.scss
@@ -69,12 +69,10 @@ $cursor_fg: #263238;
 .xml-cdata-starter { color: #b0bec5; }
 .xml-cdata-stopper { color: #b0bec5; }
 .lisp-keyword { color: #ff8a65; }
-.markdown-heading1 { font-weight: bold; font-size: 1.692em; }
-.markdown-heading2 { font-weight: bold; font-size: 1.442em; }
-.markdown-heading3 { font-weight: bold; font-size: 1.192em; }
-.markdown-heading4 { font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { font-weight: bold; font-size: 1.692em; }
+.heading2 { font-weight: bold; font-size: 1.442em; }
+.heading3 { font-weight: bold; font-size: 1.192em; }
+.heading4 { font-weight: bold; }
 .markdown-blockquote { color: #b0bec5; }
 .markdown-blockquote1 { color: #b0bec5; }
 .markdown-blockquote2 { color: #b0bec5; }
