--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -69,12 +69,10 @@ $cursor_fg: #002451;
 .xml-cdata-starter { color: #7285b7; font-style: italic; }
 .xml-cdata-stopper { color: #7285b7; font-style: italic; }
 .lisp-keyword { color: #ebbbff; }
-.markdown-heading1 { font-weight: bold; font-size: 1.383em; }
-.markdown-heading2 { font-weight: bold; font-size: 1.192em; }
-.markdown-heading3 { color: #ffc58f; font-weight: bold; }
-.markdown-heading4 { color: #ebbbff; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { font-weight: bold; font-size: 1.383em; }
+.heading2 { font-weight: bold; font-size: 1.192em; }
+.heading3 { color: #ffc58f; font-weight: bold; }
+.heading4 { color: #ebbbff; font-weight: bold; }
 .markdown-blockquote { color: #7285b7; font-style: italic; }
 .markdown-blockquote1 { color: #7285b7; font-style: italic; }
 .markdown-blockquote2 { color: #7285b7; font-style: italic; }
