--- a/src/css/themes/_ef-deuteranopia-light.scss
+++ b/src/css/themes/_ef-deuteranopia-light.scss
@@ -69,12 +69,10 @@ $cursor_fg: #f5f5ff;
 .xml-cdata-starter { color: #776d6a; font-style: italic; }
 .xml-cdata-stopper { color: #776d6a; font-style: italic; }
 .lisp-keyword { color: #1f6fbf; font-weight: bold; }
-.markdown-heading1 { color: #805d00; font-weight: bold; }
-.markdown-heading2 { color: #4250ef; font-weight: bold; }
-.markdown-heading3 { color: #765040; font-weight: bold; }
-.markdown-heading4 { color: #065fff; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #805d00; font-weight: bold; }
+.heading2 { color: #4250ef; font-weight: bold; }
+.heading3 { color: #765040; font-weight: bold; }
+.heading4 { color: #065fff; font-weight: bold; }
 .markdown-blockquote { color: #776d6a; font-style: italic; }
 .markdown-blockquote1 { color: #776d6a; font-style: italic; }
 .markdown-blockquote2 { color: #776d6a; font-style: italic; }
