--- a/src/css/themes/_ef-maris-dark.scss
+++ b/src/css/themes/_ef-maris-dark.scss
@@ -69,12 +69,10 @@ $cursor_fg: #131c2b;
 .xml-cdata-starter { color: #eaa4a4; font-style: italic; }
 .xml-cdata-stopper { color: #eaa4a4; font-style: italic; }
 .lisp-keyword { color: #d4aaf0; font-weight: bold; }
-.markdown-heading1 { color: #70a0ff; font-weight: bold; }
-.markdown-heading2 { color: #7fce5f; font-weight: bold; }
-.markdown-heading3 { color: #2fd0db; font-weight: bold; }
-.markdown-heading4 { color: #cf90ff; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #70a0ff; font-weight: bold; }
+.heading2 { color: #7fce5f; font-weight: bold; }
+.heading3 { color: #2fd0db; font-weight: bold; }
+.heading4 { color: #cf90ff; font-weight: bold; }
 .markdown-blockquote { color: #eaa4a4; font-style: italic; }
 .markdown-blockquote1 { color: #eaa4a4; font-style: italic; }
 .markdown-blockquote2 { color: #eaa4a4; font-style: italic; }
