--- a/src/css/themes/_sanityinc-tomorrow-day.scss
+++ b/src/css/themes/_sanityinc-tomorrow-day.scss
@@ -69,12 +69,10 @@ $cursor_fg: #ffffff;
 .xml-cdata-starter { color: #8e908c; font-style: italic; }
 .xml-cdata-stopper { color: #8e908c; font-style: italic; }
 .lisp-keyword { color: #8959a8; }
-.markdown-heading1 { font-weight: bold; font-size: 1.383em; }
-.markdown-heading2 { font-weight: bold; font-size: 1.192em; }
-.markdown-heading3 { color: #f5871f; font-weight: bold; }
-.markdown-heading4 { color: #8959a8; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { font-weight: bold; font-size: 1.383em; }
+.heading2 { font-weight: bold; font-size: 1.192em; }
+.heading3 { color: #f5871f; font-weight: bold; }
+.heading4 { color: #8959a8; font-weight: bold; }
 .markdown-blockquote { color: #8e908c; font-style: italic; }
 .markdown-blockquote1 { color: #8e908c; font-style: italic; }
 .markdown-blockquote2 { color: #8e908c; font-style: italic; }
