--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -69,12 +69,10 @@ $cursor_fg: #2d2d2d;
 .xml-cdata-starter { color: #999999; font-style: italic; }
 .xml-cdata-stopper { color: #999999; font-style: italic; }
 .lisp-keyword { color: #cc99cc; }
-.markdown-heading1 { font-weight: bold; font-size: 1.383em; }
-.markdown-heading2 { font-weight: bold; font-size: 1.192em; }
-.markdown-heading3 { color: #f99157; font-weight: bold; }
-.markdown-heading4 { color: #cc99cc; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { font-weight: bold; font-size: 1.383em; }
+.heading2 { font-weight: bold; font-size: 1.192em; }
+.heading3 { color: #f99157; font-weight: bold; }
+.heading4 { color: #cc99cc; font-weight: bold; }
 .markdown-blockquote { color: #999999; font-style: italic; }
 .markdown-blockquote1 { color: #999999; font-style: italic; }
 .markdown-blockquote2 { color: #999999; font-style: italic; }
