--- a/src/css/themes/_standard-dark.scss
+++ b/src/css/themes/_standard-dark.scss
@@ -69,12 +69,10 @@ $cursor_fg: #000000;
 .xml-cdata-starter { color: #ff7f24; }
 .xml-cdata-stopper { color: #ff7f24; }
 .lisp-keyword { color: #b0c4de; }
-.markdown-heading1 { color: #87cefa; font-weight: bold; }
-.markdown-heading2 { color: #eedd82; font-weight: bold; }
-.markdown-heading3 { color: #00ffff; font-weight: bold; }
-.markdown-heading4 { color: #ff7f24; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #87cefa; font-weight: bold; }
+.heading2 { color: #eedd82; font-weight: bold; }
+.heading3 { color: #00ffff; font-weight: bold; }
+.heading4 { color: #ff7f24; font-weight: bold; }
 .markdown-blockquote { color: #ff7f24; }
 .markdown-blockquote1 { color: #ff7f24; }
 .markdown-blockquote2 { color: #ff7f24; }
