--- a/src/css/themes/_standard-light.scss
+++ b/src/css/themes/_standard-light.scss
@@ -69,12 +69,10 @@ $cursor_fg: #ffffff;
 .xml-cdata-starter { color: #b22222; }
 .xml-cdata-stopper { color: #b22222; }
 .lisp-keyword { color: #483d8b; }
-.markdown-heading1 { color: #0000ff; font-weight: bold; }
-.markdown-heading2 { color: #a0522d; font-weight: bold; }
-.markdown-heading3 { color: #800080; font-weight: bold; }
-.markdown-heading4 { color: #b22222; font-weight: bold; }
-.markdown-heading5 { font-weight: bold; font-style: italic; }
-.markdown-heading6 { font-weight: bold; }
+.heading1 { color: #0000ff; font-weight: bold; }
+.heading2 { color: #a0522d; font-weight: bold; }
+.heading3 { color: #800080; font-weight: bold; }
+.heading4 { color: #b22222; font-weight: bold; }
 .markdown-blockquote { color: #b22222; }
 .markdown-blockquote1 { color: #b22222; }
 .markdown-blockquote2 { color: #b22222; }
