--- a/src/css/themes/_ef-elea-dark.scss
+++ b/src/css/themes/_ef-elea-dark.scss
@@ -12,9 +12,9 @@ $cursor_fg: #222524;
 .Ymacs-Theme-ef-elea-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-ef-elea-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #2b2e2d; border-bottom: 1px solid #2b2e2d; }
 .Ymacs-Theme-ef-elea-dark .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #2b2e2d; border-right: 1px solid #2b2e2d; }
-.Ymacs-Theme-ef-elea-dark .Ymacs_Frame-active .Ymacs-current-line { background-color: #2f413f63 }
+.Ymacs-Theme-ef-elea-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #2f413f63 }
 .Ymacs-Theme-ef-elea-dark .Ymacs-frame-content div.line:before { color: #969faf; }
-.Ymacs-Theme-ef-elea-dark .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-ef-elea-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
 .Ymacs-Theme-ef-elea-dark .Ymacs-frame-content:before { color: #969faf; background-color: #222524; }
 .Ymacs-Theme-ef-elea-dark {
 .Ymacs_Popup {
