--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -12,9 +12,9 @@ $cursor_fg: #002451;
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #003f8e; border-bottom: 1px solid #003f8e; }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #003f8e; border-right: 1px solid #003f8e; }
-.Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_Frame-active .Ymacs-current-line { background-color: #00346e63 }
+.Ymacs-Theme-sanityinc-tomorrow-blue.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #00346e63 }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs-frame-content div.line:before { color: #7285b7; }
-.Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-blue.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-blue .Ymacs-frame-content:before { color: #7285b7; background-color: #002c5f; }
 .Ymacs-Theme-sanityinc-tomorrow-blue {
 .Ymacs_Popup {
