--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -12,9 +12,9 @@ $cursor_fg: #2d2d2d;
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #515151; border-bottom: 1px solid #515151; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #515151; border-right: 1px solid #515151; }
-.Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_Frame-active .Ymacs-current-line { background-color: #39393963 }
+.Ymacs-Theme-sanityinc-tomorrow-eighties.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #39393963 }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs-frame-content div.line:before { color: #999999; }
-.Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #cccccc; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-eighties.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #cccccc; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties .Ymacs-frame-content:before { color: #999999; background-color: #333333; }
 .Ymacs-Theme-sanityinc-tomorrow-eighties {
 .Ymacs_Popup {
