--- a/src/css/themes/_sanityinc-tomorrow-night.scss
+++ b/src/css/themes/_sanityinc-tomorrow-night.scss
@@ -12,9 +12,9 @@ $cursor_fg: #1d1f21;
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #373b41; border-bottom: 1px solid #373b41; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #373b41; border-right: 1px solid #373b41; }
-.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame-active .Ymacs-current-line { background-color: #282a2e63 }
+.Ymacs-Theme-sanityinc-tomorrow-night.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #282a2e63 }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs-frame-content div.line:before { color: #969896; }
-.Ymacs-Theme-sanityinc-tomorrow-night .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #c5c8c6; font-weight: bold; }
+.Ymacs-Theme-sanityinc-tomorrow-night.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #c5c8c6; font-weight: bold; }
 .Ymacs-Theme-sanityinc-tomorrow-night .Ymacs-frame-content:before { color: #969896; background-color: #222427; }
 .Ymacs-Theme-sanityinc-tomorrow-night {
 .Ymacs_Popup {
