--- a/src/css/themes/_standard-dark.scss
+++ b/src/css/themes/_standard-dark.scss
@@ -12,9 +12,9 @@ $cursor_fg: #000000;
 .Ymacs-Theme-standard-dark .Ymacs_SplitCont > .bar { background-color: #969896; }
 .Ymacs-Theme-standard-dark .Ymacs_SplitCont.horiz > .bar { border-top: 1px solid #cccccc; border-bottom: 1px solid #666666; }
 .Ymacs-Theme-standard-dark .Ymacs_SplitCont.vert > .bar { border-left: 1px solid #cccccc; border-right: 1px solid #666666; }
-.Ymacs-Theme-standard-dark .Ymacs_Frame-active .Ymacs-current-line { background-color: #33481563 }
+.Ymacs-Theme-standard-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret) { background-color: #33481563 }
 .Ymacs-Theme-standard-dark .Ymacs-frame-content div.line:before { color: #a6a6a6; }
-.Ymacs-Theme-standard-dark .Ymacs_Frame-active div.line.Ymacs-current-line:before { color: #ffffff; font-weight: bold; }
+.Ymacs-Theme-standard-dark.Ymacs-hl-line .Ymacs_Frame-active div.line:has(.Ymacs-caret):before { color: #ffffff; font-weight: bold; }
 .Ymacs-Theme-standard-dark .Ymacs-frame-content:before { color: #a6a6a6; background-color: #000000; }
 .Ymacs-Theme-standard-dark {
 .Ymacs_Popup {
