Ymacs_BaseLang - an attempt to unify some tokenizer work

--- a/src/css/ymacs-common.scss
+++ b/src/css/ymacs-common.scss
@@ -316,4 +316,5 @@ $lnwidth: 3.1em;
   .italic { font-style: italic; }
   .bold  { font-weight: bold; }
   .link { text-decoration: underline; }
+  .trailing-whitespace { text-decoration: underline; }
 }
