--- a/src/css/themes/_ef-deuteranopia-light.scss
+++ b/src/css/themes/_ef-deuteranopia-light.scss
@@ -47,11 +47,11 @@ $cursor_fg: #f5f5ff;
 .regexp-stopper { color: #965000; }
 .regexp-modifier { color: #965000; }
 .keyword { color: #4250ef; font-weight: bold; }
-.comment { color: #776d6a; font-style: italic; }
-.mcomment { color: #776d6a; font-style: italic; }
-.comment-starter { color: #776d6a; font-style: italic; }
-.mcomment-starter { color: #776d6a; font-style: italic; }
-.mcomment-stopper { color: #776d6a; font-style: italic; }
+.comment { color: #77604a; font-style: italic; }
+.mcomment { color: #77604a; font-style: italic; }
+.comment-starter { color: #77604a; font-style: italic; }
+.mcomment-starter { color: #77604a; font-style: italic; }
+.mcomment-stopper { color: #77604a; font-style: italic; }
 .number { color: #765040; }
 .operator { }
 .error { color: #765040; }
@@ -65,16 +65,16 @@ $cursor_fg: #f5f5ff;
 .xml-open-bracket { }
 .xml-close-bracket { }
 .xml-closetag-slash { }
-.xml-cdata { color: #776d6a; font-style: italic; }
-.xml-cdata-starter { color: #776d6a; font-style: italic; }
-.xml-cdata-stopper { color: #776d6a; font-style: italic; }
+.xml-cdata { color: #77604a; font-style: italic; }
+.xml-cdata-starter { color: #77604a; font-style: italic; }
+.xml-cdata-stopper { color: #77604a; font-style: italic; }
 .lisp-keyword { color: #1f6fbf; font-weight: bold; }
 .heading1 { color: #805d00; font-weight: bold; }
 .heading2 { color: #4250ef; font-weight: bold; }
 .heading3 { color: #765040; font-weight: bold; }
 .heading4 { color: #065fff; font-weight: bold; }
-.markdown-blockquote { color: #776d6a; font-style: italic; }
-.markdown-blockquote1 { color: #776d6a; font-style: italic; }
-.markdown-blockquote2 { color: #776d6a; font-style: italic; }
-.markdown-blockquote3 { color: #776d6a; font-style: italic; }
+.markdown-blockquote { color: #77604a; font-style: italic; }
+.markdown-blockquote1 { color: #77604a; font-style: italic; }
+.markdown-blockquote2 { color: #77604a; font-style: italic; }
+.markdown-blockquote3 { color: #77604a; font-style: italic; }
 }
