--- a/src/css/themes/_sanityinc-tomorrow-blue.scss
+++ b/src/css/themes/_sanityinc-tomorrow-blue.scss
@@ -53,7 +53,7 @@ $cursor_fg: #002451;
 .mcomment-starter { color: #7285b7; font-style: italic; }
 .mcomment-stopper { color: #7285b7; font-style: italic; }
 .number { color: #bbdaff; }
-.operator { }
+.operator { color: #ffc58f; }
 .error { color: #ff9da4; font-weight: bold; }
 .isearch-fail { background-color: #ff9da4; color: #002451; font-weight: bold; }
 .xml-open-tag { color: #ffc58f; }
