--- a/src/css/themes/_sanityinc-tomorrow-bright.scss
+++ b/src/css/themes/_sanityinc-tomorrow-bright.scss
@@ -53,7 +53,7 @@ $cursor_fg: #000000;
 .mcomment-starter { color: #969896; font-style: italic; }
 .mcomment-stopper { color: #969896; font-style: italic; }
 .number { color: #7aa6da; }
-.operator { }
+.operator { color: #e78c45; }
 .error { color: #d54e53; font-weight: bold; }
 .isearch-fail { background-color: #d54e53; color: #000000; font-weight: bold; }
 .xml-open-tag { color: #e78c45; }
