--- a/src/css/themes/_sanityinc-tomorrow-day.scss
+++ b/src/css/themes/_sanityinc-tomorrow-day.scss
@@ -53,7 +53,7 @@ $cursor_fg: #ffffff;
 .mcomment-starter { color: #8e908c; font-style: italic; }
 .mcomment-stopper { color: #8e908c; font-style: italic; }
 .number { color: #4271ae; }
-.operator { }
+.operator { color: #f5871f; }
 .error { color: #c82829; font-weight: bold; }
 .isearch-fail { background-color: #c82829; color: #ffffff; font-weight: bold; }
 .xml-open-tag { color: #f5871f; }
