--- a/src/css/themes/_sanityinc-tomorrow-eighties.scss
+++ b/src/css/themes/_sanityinc-tomorrow-eighties.scss
@@ -53,7 +53,7 @@ $cursor_fg: #2d2d2d;
 .mcomment-starter { color: #999999; font-style: italic; }
 .mcomment-stopper { color: #999999; font-style: italic; }
 .number { color: #6699cc; }
-.operator { }
+.operator { color: #f99157; }
 .error { color: #f2777a; font-weight: bold; }
 .isearch-fail { background-color: #f2777a; color: #2d2d2d; font-weight: bold; }
 .xml-open-tag { color: #f99157; }
