--- a/src/css/themes/_sanityinc-tomorrow-night.scss
+++ b/src/css/themes/_sanityinc-tomorrow-night.scss
@@ -53,7 +53,7 @@ $cursor_fg: #1d1f21;
 .mcomment-starter { color: #969896; font-style: italic; }
 .mcomment-stopper { color: #969896; font-style: italic; }
 .number { color: #81a2be; }
-.operator { }
+.operator { color: #de935f; }
 .error { color: #cc6666; font-weight: bold; }
 .isearch-fail { background-color: #cc6666; color: #1d1f21; font-weight: bold; }
 .xml-open-tag { color: #de935f; }
