--- a/test/test.css
+++ b/test/test.css
@@ -15,6 +15,8 @@
 @import url("../dist/themes/ef-autumn.css");
 @import url("../dist/themes/ef-maris-light.css");
 @import url("../dist/themes/ef-maris-dark.css");
+@import url("../dist/themes/ef-duo-light.css");
+@import url("../dist/themes/ef-duo-dark.css");
 
 html, body {
   background-color: #997;
